# Arbitrage_p2p

./: .env.example  .gitignore  .pre-commit-config.yaml  .ruff.toml  Dockerfile  Makefile  README.md  docker-compose.yml  mypy.ini  pyproject.toml
backend/app/: __init__.py  main.py  models.py  setting.py
libs/connectors/: __init__.py  base.py  ccxt_wrapper.py
migrations/versions/: 0001_initial.py
services/arbitrage/: __init__.py
services/execution/: __init__.py
services/ingestion/: __init__.py
