[tool.poetry]
name = "arbitrage-navigator"
version = "0.1.0"
description = "Service for discovering profitable P2P chains across crypto exchanges"
authors = ["Your Team"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111"
uvicorn = {extras = ["standard"], version = "^0.29"}
pydantic = "^2.7"
sqlalchemy = {extras = ["asyncio"], version = "^2.0"}
asyncpg = "^0.29"
ccxt = "^4.2"
httpx = {extras = ["http2"], version = "^0.27"}
redis = "^5.0"
celery = "^5.4"
ujson = "^5.9"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4"
mypy = "^1.10"
pytest = "^8.2"
pytest-asyncio = "^0.23"
httpx = {extras = ["cli"], version = "^0.27"}
pre-commit = "^3.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"
line-length = 100
extend-select = ["I"]  # isort

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
